add rewarded events
